p2/shared/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: p2
spec:
  selector:
    matchLabels:
      app: app2
  replicas: 3
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: haliris/app2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: web
          protocol: TCP
