p2/shared/app3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  namespace: p2
spec:
  selector:
    matchLabels:
      app: app3
  replicas: 1
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: app3
        image: haliris/app3
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: web
          protocol: TCP
