p2/shared/helloworld.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
  namespace: p2
spec:
  selector:
    matchLabels:
      app: helloworld
  replicas: 1
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - name: helloworld
        image: paulbouwer/hello-kubernetes:1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: web
          protocol: TCP
