p2/shared/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: p2
spec:
  type: NodePort
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
