p2/shared/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  namespace: p2
spec:
  type: NodePort
  selector:
    app: app2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
