p2/shared/service3.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3-service
  namespace: p2
spec:
  type: NodePort
  selector:
    app: app3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
